--- a/design/styles.css
+++ b/design/styles.css
@@ -2,14 +2,39 @@ body {
   font-family: "Poppins", sans-serif;
 }
 
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 1440px;
+  margin: 80px;
+}
+
+header {
+  width: 450px;
+  margin-bottom: 40px;
+}
+
+section {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+}
+
+article {
+  width: 400px;
+  height: 200px;
+}
+
 h1,
 h2 {
   font-size: 2em;
+  margin: 20px;
 }
 
 p {
   font-size: 15px;
   font-weight: 200;
+  text-align: center;
 }
 
 #firstHeading {
