--- a/design/styles.css
+++ b/design/styles.css
@@ -18,11 +18,13 @@ header {
 section {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(2, 40%);
 }
 
 article {
   width: 400px;
   height: 200px;
+  border: 1px solid black;
 }
 
 h1,
@@ -43,6 +45,26 @@ p {
 
 #secondHeading {
   font-weight: 600;
+}
+
+.leftSide {
+  grid-row-start: 2;
+  grid-column-start: 1;
+}
+
+.rightSide {
+  grid-row-start: 2;
+  grid-column-end: 4;
+}
+
+.middleTop {
+  grid-row-start: 1;
+  grid-column-end: 3;
+}
+
+.middleBottom {
+  grid-row-start: 3;
+  grid-column-end: 3;
 }
 
 .attribution {
