--- a/design/styles.css
+++ b/design/styles.css
@@ -1,3 +1,28 @@
+:root {
+  font-size: 15px;
+  --red: hsl(0, 78%, 62%);
+  --cyan: hsl(180, 62%, 55%);
+  --orange: hsl(34, 97%, 64%);
+  --blue: hsl(212, 86%, 64%);
+  --veryDarkBlue: hsl(234, 12%, 34%);
+  --grayishBlue: hsl(229, 6%, 66%);
+  --veryLightGray: hsl(0, 0%, 98%);
+  --transition-speed: 600ms;
+}
+/* 
+## Colors
+
+- Red: hsl(0, 78%, 62%)
+- Cyan: hsl(180, 62%, 55%)
+- Orange: hsl(34, 97%, 64%)
+- Blue: hsl(212, 86%, 64%)
+
+### Neutral
+
+- Very Dark Blue: hsl(234, 12%, 34%)
+- Grayish Blue: hsl(229, 6%, 66%)
+- Very Light Gray: hsl(0, 0%, 98%) */
+
 body {
   font-family: "Poppins", sans-serif;
 }
@@ -11,8 +36,13 @@ main {
 }
 
 header {
-  width: 450px;
+  width: 500px;
   margin-bottom: 40px;
+}
+
+header p,
+.card p {
+  color: var(--grayishBlue);
 }
 
 section {
@@ -24,12 +54,11 @@ section {
 article {
   width: 400px;
   height: 200px;
-  border: 1px solid black;
 }
 
 h1,
 h2 {
-  font-size: 2em;
+  font-size: 2.3em;
   margin: 20px;
 }
 
@@ -47,7 +76,12 @@ p {
   font-weight: 600;
 }
 
-.leftSide {
+/* .card {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+} */
+
+/* .leftSide {
   grid-row-start: 2;
   grid-column-start: 1;
 }
@@ -65,6 +99,45 @@ p {
 .middleBottom {
   grid-row-start: 3;
   grid-column-end: 3;
+} */
+
+.card {
+  box-shadow: 1px 1px 10px lightgray;
+  border-radius: 10px;
+  padding: 2em;
+}
+
+.card h3 {
+  margin-bottom: 1.5em;
+}
+
+.card p {
+  text-align: left;
+}
+
+.middleTop {
+  margin-bottom: 2em;
+  border-top: 5px solid var(--red);
+}
+
+.middleBottom {
+  margin-top: 2em;
+  border-top: 5px solid var(--orange);
+}
+
+.leftSide {
+  margin-right: 2em;
+  border-top: 5px solid var(--cyan);
+}
+
+.rightSide {
+  margin-left: 2em;
+  border-top: 5px solid var(--blue);
+}
+
+.leftSide,
+.rightSide {
+  margin-top: 10em;
 }
 
 .attribution {
