--- a/design/styles.css
+++ b/design/styles.css
@@ -37,12 +37,17 @@ main {
 
 header {
   width: 500px;
-  margin-bottom: 40px;
+  margin-bottom: 5em;
+  color: var(--veryDarkBlue);
 }
 
-header p,
 .card p {
   color: var(--grayishBlue);
+}
+
+header p {
+  font-weight: 400;
+  line-height: 1.5;
 }
 
 section {
@@ -109,10 +114,12 @@ p {
 
 .card h3 {
   margin-bottom: 1.5em;
+  font-size: 1.2em;
 }
 
 .card p {
   text-align: left;
+  line-height: 1.5em;
 }
 
 .middleTop {
